# zkRealEstate

./: README.md
calculator/: package-lock.json  package.json
calculator/Encrypt/: calculator_enc.py  encryption.py
calculator/Hash/: calculator_hash.py  hash.py  main.py  mimc.py
client/: Makefile  README.md  circuit.json  setup.py
client/test_commands/: deploy_test_token.py  mock.py
client/tests/: test_accumulator.py  test_context.py  test_encryption.py  test_ethervalue.py  test_hash.py  test_libzklay.py  test_montgomery.py  test_montgomery_curve.py  test_rollup.py  test_scenario.py
client/zklay/cli/: TEST.py  debugger.py  scenario.py  utils.py  zklay  zklay-config  zklay_anontransfer.py  zklay_audit.py  zklay_audit_key_gen.py  zklay_config.py  zklay_deploy.py  zklay_gen_address.py  zklay_ls_notes.py  zklay_mint.py  zklay_postru.py  zklay_sync.py
client/zklay/core/: accumulator.py  constants.py  context.py  contracts.py  hash.py  mimc.py  montgomery_curve.py  pairing.py  poseidon.py  sha.py  utils.py  zklay_address.py  zklay_audit_address.py  zklay_client.py  zklay_encryption.py  zklay_note.py  zklay_rollup.py  zklay_snark.py  zklay_wallet.py
depends/ganache-cli-archive/: package-lock.json
depends/libsnark-optimization/: Makefile  README.md  api.hpp  logging.hpp
depends/libsnark-optimization/api/: api.cpp  build_circuit.tcc  context.hpp  context.tcc  context_base.cpp  context_base.hpp  context_def.hpp  eval_inputs.tcc  jni_functions.cpp  mem_iostream.hpp  p_input_update.cpp  proof.tcc  read_write.tcc  read_write_cs.tcc  serialize.tcc  setup.tcc  verify.tcc
depends/libsnark-optimization/build_scripts/: CMakeLists.txt  Doxygen  android.cmake  android.mk  darwin.cmake  darwin.mk  ios.cmake  ios.mk  linux.cmake  linux.mk  make_helper.py
depends/libsnark-optimization/build_workspace/: darwin_path.info
depends/libsnark-optimization/build_workspace/darwin/Snark_debug/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
depends/libsnark-optimization/build_workspace/darwin/Snark_release/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
depends/libsnark-optimization/build_workspace/test/: test.debug  test.release
depends/libsnark-optimization/depends/CircuitBuilder/: OpCode.hpp  global.hpp
depends/libsnark-optimization/depends/CircuitBuilder-CRV/: CMakeLists.txt
depends/libsnark-optimization/depends/CircuitBuilder-CRV/generators/: Register.cpp  Register.hpp  Tally.cpp  Tally.hpp  Vote.cpp  Vote.hpp
depends/libsnark-optimization/depends/CircuitBuilder-Gadgets/: DecryptionGadget.cpp  DecryptionGadget.hpp  MerkleTreeGadget.cpp  MerkleTreeGadget.hpp
depends/libsnark-optimization/depends/CircuitBuilder-Gadgets/diffieHellmanKeyExchange/: ECGroupGeneratorGadget.cpp  ECGroupGeneratorGadget.hpp  ECGroupOperationGadget.cpp  ECGroupOperationGadget.hpp
depends/libsnark-optimization/depends/CircuitBuilder-Gadgets/hash/: HashGadget.cpp  HashGadget.hpp  MerkleTreePathGadget.cpp  MerkleTreePathGadget.hpp  MerkleTreePathGadget_MiMC7.cpp  MerkleTreePathGadget_MiMC7.hpp  MiMC7Gadget.cpp  MiMC7Gadget.hpp  PoseidonConstants.hpp  PoseidonGadget.cpp  PoseidonGadget.hpp  SHA256Gadget.cpp  SHA256Gadget.hpp  SubsetSumHashGadget.cpp  SubsetSumHashGadget.hpp
depends/libsnark-optimization/depends/CircuitBuilder-Gadgets/math/: FieldDivisionGadget.hpp  ModConstantGadget.hpp
depends/libsnark-optimization/depends/CircuitBuilder-NFID/: CMakeLists.txt
depends/libsnark-optimization/depends/CircuitBuilder-NFID/generators/: NFID.cpp  NFID.hpp
depends/libsnark-optimization/depends/CircuitBuilder-RealEstate/: CMakeLists.txt
depends/libsnark-optimization/depends/CircuitBuilder-RealEstate/Gadgets/: BondDecryptionGadget.cpp  BondDecryptionGadget.hpp
depends/libsnark-optimization/depends/CircuitBuilder-RealEstate/generators/: AcceptLending.cpp  AcceptLending.hpp  LiquidateCollateral.cpp  LiquidateCollateral.hpp  Repay.cpp  Repay.hpp  RequestLending.cpp  RequestLending.hpp  ReturnFunds.cpp  ReturnFunds.hpp  X_AcceptLending.cpp  X_AcceptLending.hpp  X_Repay.cpp  X_Repay.hpp  X_ReturnFunds.cpp  X_ReturnFunds.hpp
depends/libsnark-optimization/depends/CircuitBuilder-ZKlay/: CMakeLists.txt  ECGroupExp.cpp  ECGroupExp.hpp
depends/libsnark-optimization/depends/CircuitBuilder-ZKlay/generators/: ZKlay.cpp  ZKlay.hpp
depends/libsnark-optimization/depends/CircuitBuilder-zkzkRollup/: CMakeLists.txt
depends/libsnark-optimization/depends/ec/: curve25519.cpp  curve25519.hpp
depends/libsnark-optimization/depends/google_snappy/: snappy-stubs-public.h
depends/libsnark-optimization/depends/hashes/: Keccak256.cpp  Keccak256.hpp  Poseidon.cpp  Poseidon.hpp  PoseidonConstants.hpp  merkle_tree_path.cpp  merkle_tree_path.hpp  mimc7_hash.cpp  mimc7_hash.hpp
depends/libsnark-optimization/depends/include/: BigInteger.hpp
depends/libsnark-optimization/depends/integer_functions/: integer_functions.hpp  ressol.cpp
depends/libsnark-optimization/depends/json_tree/: json_tree.cpp  json_tree.hpp
depends/libsnark-optimization/depends/misc/: misc.cpp  misc.hpp
depends/libsnark-optimization/libsnark/gadgetlib2/: adapters.hpp  adapters.tcc  constraint.hpp  constraint.tcc  gadget.cpp  gadget.hpp  infrastructure.hpp  integration.hpp  integration.tcc  protoboard.hpp  protoboard.tcc  variable.hpp  variable.tcc  variable_operators.hpp
depends/libsnark-optimization/libsnark/jsnark_interface/: ArithFileCircuitReader.hpp  ArithFileCircuitReader.tcc  EmbeddedGeneratorCircuitReader.hpp  EmbeddedGeneratorCircuitReader.tcc
depends/libsnark-optimization/libsnark/knowledge_commitment/: kc_multiexp.hpp  kc_multiexp.tcc
depends/libsnark-optimization/libsnark/relations/: variable.hpp
depends/libsnark-optimization/test/: Makefile  RealEstate_crs_pk.json  RealEstate_crs_vk.json  RealEstate_proof.json  misc_function_test.cpp  sample_input.json  test.cpp
zklay_contracts/: package.json
zklay_contracts/contracts/: Groth16AltBN128.sol  Groth16AltBN128Mixer.sol  Pairing.sol  Poseidon2.sol  zklayBase.sol
zklay_contracts/migrations/: 2_deploy_contracts.js
(+92 files in other folders)
